Split by versions

--- a/iconv/Makefile
+++ b/iconv/Makefile
@@ -1,7 +1,10 @@
 VERSION?=latest
+FOLDER?=1.4
+
+all: build push
 
 build:
-	docker build -t cnsa/elixir-iconv:${VERSION} .
+	docker build -t cnsa/elixir-iconv:${VERSION} ./${FOLDER}
 
 push:
 	docker push cnsa/elixir-iconv:${VERSION}
